fix z-index

--- a/src/components/LockCard.module.scss
+++ b/src/components/LockCard.module.scss
@@ -11,7 +11,6 @@
     margin: 1rem;
     cursor: pointer;
     transition: 0.4s;
-    z-index: 10000;
 }
 
 .card:hover {
